--- a/AstTray/AstTray/App.config
+++ b/AstTray/AstTray/App.config
@@ -4,10 +4,15 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 <appSettings>
-  <add key="astHost" value="192.168.1.147"/>
+  <!--<add key="astHost" value="192.168.1.19"/>
   <add key="astPort" value="5038"/>
   <add key="astuser" value="test"/>
   <add key="astPass" value="mysecret"/>
-  <add key="astExten" value="100"/>
+  <add key="astExten" value="100"/>-->
+  <add key="astHost" value="10.1.2.254"/>
+  <add key="astPort" value="5038"/>
+  <add key="astuser" value="110"/>
+  <add key="astPass" value="9324$jsd"/>
+  <add key="astExten" value="110"/>
 </appSettings>
 </configuration>
