--- a/AstTray/AstTray/App.config
+++ b/AstTray/AstTray/App.config
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-<appSettings>
-  <!--<add key="astHost" value="192.168.1.19"/>
-  <add key="astPort" value="5038"/>
-  <add key="astuser" value="test"/>
-  <add key="astPass" value="mysecret"/>
-  <add key="astExten" value="100"/>-->
-  
-</appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
+    <add key="astHost" value="192.168.1.19"/>
+    <add key="astPort" value="5038"/>
+    <add key="astuser" value="test"/>
+    <add key="astPass" value="mysecret"/>
+    <add key="astExten" value="100"/>
+  </appSettings>
 </configuration>
