AsterNET via nuget and code tidy

--- a/AstTray/AstTray/AstTray.csproj
+++ b/AstTray/AstTray/AstTray.csproj
@@ -36,9 +36,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Asterisk.NET, Version=1.6.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\CodePlex-AsterNET\asternet\Asterisk.2013\Asterisk.NET\bin\Debug\Asterisk.NET.dll</HintPath>
+    <Reference Include="AsterNET">
+      <HintPath>..\packages\AsterNET.1.0.0\lib\AsterNET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -98,6 +97,7 @@
       <DependentUpon>Click2CallControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config.example" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -107,9 +107,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
