--- a/AstTray/AstTray/AstTray.csproj
+++ b/AstTray/AstTray/AstTray.csproj
@@ -36,8 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AsterNET">
-      <HintPath>..\packages\AsterNET.1.0.0\lib\AsterNET.dll</HintPath>
+    <Reference Include="AsterNET, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AsterNET.1.0.1\lib\AsterNET.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
